made page product

--- a/product-page.html
+++ b/product-page.html
@@ -103,7 +103,7 @@
                 </div>
             </div>
         </div>
-        <div class="background-page-category">
+        <div class="background-page-product">
             <div class="container">
                 <div class="row">
                     <div class="container-aside"></div>
@@ -205,7 +205,7 @@
                     </div>
                     <div class="container-main">
                         <div class="row">
-                            <div class="col-12">
+                            <div class="col-12 col-xl-24">
                                 <div class="block-product-img">
                                     <div class="block-product-img__img">
                                         <img src="images/product/product-page/main-img--product.png" alt="">
@@ -267,7 +267,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12">
+                            <div class="col-12 col-xl-24">
                                 <div class="block-product-text">
                                     <h2 class="block-product-text__h2">Описание продукта</h2>
                                     <p>Сыр «Мезан-Люкс» изготовлен из отборного молока класса «экстра», в котором находится минимально допустимое количество микроорганизмов, способствующих скисанию молока.</p>
@@ -279,44 +279,65 @@
                                     <p>Республика Беларусь, г. Каменец, ОАО «Савушкин продукт».</p>
                                 </div>
                             </div>
-                            <col-24>
+                            <div class="col-24">
                                 <div class="product-use-carousel">
                                     <div class="container">
                                         <div class="row">
-                                            <div class="col-8">
+                                            <div class="col-8 col-xl-12 col-lg-24">
                                                 <div class="product-use-carousel__carousel">
-                                                    <a href="">
-                                                        <div class="product-use-carousel__carousel__item"><img src="images/product/product-page/product-use-1.png" alt="">
-                                                            <div class="product-use-carousel__carousel__item__name">Паста Сицилиана</div>
-                                                            <div class="product-use-carousel__carousel__item__block-link">
-                                                                <a href="">Подробней</a>
-                                                            </div>
+                                                    <div class="product-use-carousel__carousel__item">
+                                                        <img src="images/product/product-page/product-use-1.png" alt="">
+                                                        <div class="product-use-carousel__carousel__item__name">Паста Сицилиана</div>
+                                                        <div class="product-use-carousel__carousel__item__block-link">
+                                                            <a href=""><span>Подробней</span></a>
                                                         </div>
-                                                    </a>
-                                                    <a href="">
-                                                        <div class="product-use-carousel__carousel__item"><img src="images/product/product-page/product-use-2.png" alt="">
-                                                            <div class="product-use-carousel__carousel__item__name">Паста Сицилиана</div>
-                                                            <div class="product-use-carousel__carousel__item__block-link">
-                                                                <a href="">Подробней</a>
-                                                            </div>
+                                                    </div>
+                                                    <div class="product-use-carousel__carousel__item"><img src="images/product/product-page/product-use-2.png" alt="">
+                                                        <div class="product-use-carousel__carousel__item__name">Паста Сицилиана</div>
+                                                        <div class="product-use-carousel__carousel__item__block-link">
+                                                            <a href=""><span>Подробней</span></a>
                                                         </div>
-                                                    </a>
-                                                    <a href="">
-                                                        <div class="product-use-carousel__carousel__item"><img src="images/product/product-page/product-use-1.png" alt="">
-                                                            <div class="product-use-carousel__carousel__item__name">Паста Сицилиана</div>
-                                                            <div class="product-use-carousel__carousel__item__block-link">
-                                                                <a href="">Подробней</a>
-                                                            </div>
-                                                        </div>
-                                                    </a>
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="col-8"></div>
-                                            <div class="col-8"></div>
+                                            <div class="col-8 col-xl-12 col-lg-24">
+                                                <div class="product-use-carousel__carousel">
+                                                    <div class="product-use-carousel__carousel__item">
+                                                        <img src="images/product/product-page/product-use-1.png" alt="">
+                                                        <div class="product-use-carousel__carousel__item__name">Паста Сицилиана</div>
+                                                        <div class="product-use-carousel__carousel__item__block-link">
+                                                            <a href=""><span>Подробней</span></a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="product-use-carousel__carousel__item"><img src="images/product/product-page/product-use-2.png" alt="">
+                                                        <div class="product-use-carousel__carousel__item__name">Паста Сицилиана</div>
+                                                        <div class="product-use-carousel__carousel__item__block-link">
+                                                            <a href=""><span>Подробней</span></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-8 col-xl-12 col-lg-24">
+                                                <div class="product-use-carousel__carousel">
+                                                    <div class="product-use-carousel__carousel__item">
+                                                        <img src="images/product/product-page/product-use-1.png" alt="">
+                                                        <div class="product-use-carousel__carousel__item__name">Паста Сицилиана</div>
+                                                        <div class="product-use-carousel__carousel__item__block-link">
+                                                            <a href=""><span>Подробней</span></a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="product-use-carousel__carousel__item"><img src="images/product/product-page/product-use-2.png" alt="">
+                                                        <div class="product-use-carousel__carousel__item__name">Паста Сицилиана</div>
+                                                        <div class="product-use-carousel__carousel__item__block-link">
+                                                            <a href=""><span>Подробней</span></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </col-24>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -358,12 +379,11 @@
                     </div>
                 </div>
             </div>
-            <div class="cow"></div>
+            <div class="milk"></div>
             <div class="block-left-top"></div>
             <div class="block-right"></div>
             <div class="block-left-middle"></div>
             <div class="block-left-bottom"></div>
-            <div class="cheese-left"></div>
             <div class="cheese-right"></div>
         </div>
         <footer>
