--- a/index.html
+++ b/index.html
@@ -404,6 +404,61 @@
                             </div>
                         </div>
                     </div>
+                    <div class="recommendation__carousel__block">
+                        <div class="recommendation__list row">
+                            <div class="col-8 col-xl-8 col-lg-8 col-md-12 col-sm-24">
+                                <div class="row">
+                                    <div class="recommendation__block" style="background-image: url('images/recommendation/ras.jpg')">
+                                        <div class="icon">
+                                            <span class="icon__like"></span>
+                                        </div>
+                                        <div class="recommendation__block__title-mini recommendation__block__line recommendation__block__line_right">
+                                            <p>Рассольные сыры собственного приготовления линейка опускается с нижней стороны</p></div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="recommendation__block" style="background-image: url('images/recommendation/mlekara.jpg')"></div>
+                                </div>
+                            </div>
+                            <div class="col-8 col-xl-8 col-lg-8 col-md-12 col-sm-24">
+                                <div class="row">
+                                    <div class="recommendation__block recommendation__block_col-2" style="background-image: url('images/recommendation/cheese-par.jpg')">
+                                        <div class="like">
+                                            <a href=""></a>
+                                        </div>
+                                        <div class="recommendation__block__title-mini recommendation__block__line recommendation__block__line_bottom">
+                                            <p>
+                                                Сыры «Гойя»
+                                                Аргентина
+                                                очень длинный заголовок
+                                                текст поднимается выше
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-8 col-xl-8 col-lg-8 col-md-24 col-sm-24">
+                                <div class="row">
+                                    <div class="recommendation__block" style="background-image: url('images/recommendation/bondesto.jpg')"></div>
+                                </div>
+                                <div class="row">
+                                    <div class="recommendation__block" style="background-image: url('images/recommendation/cheese.jpg')">
+                                        <div class="like">
+                                            <a href=""></a>
+                                        </div>
+                                        <div class="recommendation__block__title-mini recommendation__block__line recommendation__block__line_right-top">
+                                            Сыры «Гауда»
+                                            Аргентина
+                                            желта
+                                            линейка
+                                            остается на
+                                            месте
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="production-spinner container-fluid">
@@ -617,7 +672,7 @@
             <div class="footer">
                 <div class="container">
                     <div class="row table table_middle">
-                        <div class="col-12 col-lg-24 col-lg-table-none table__cell">
+                        <div class="col-14 col-lg-24 col-lg-table-none table__cell">
                             <div class="footer__title">Как к нам проехать?</div>
                             <div class="footer__button">
                                 <a href="" class="button-cheese"><span>
@@ -629,7 +684,7 @@
                                     Схема проезда</span></a>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-24 col-lg-table-none table__cell">
+                        <div class="col-10 col-lg-24 col-lg-table-none table__cell">
                             <div class="footer__phone">
                                 <a href="">8 (495) 424-20-60</a>
                             </div>
