Сыр анимация и адаптив

--- a/index.html
+++ b/index.html
@@ -113,7 +113,51 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12 col-lg-24">
-                            <div class="cheese__product cheese__product--active">
+                            <div class="cheese__product active" data-cheese="content" data-cheese-index="item1">
+                            <h3 class="cheese__title">Продукты<br>для HoReCa</h3>
+                            <a href="" class="cheese__back">&lt; Назад  —</a>
+                            <div class="cheese__text-block">
+                                <p class="cheese__text">Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.</p>
+                                <ul class="cheese__links">
+                                    <li class="cheese__item"><a href="" class="cheese__link">Масло сливочное и спреды</a></li>
+                                    <li class="cheese__item"><a href="" class="cheese__link">Молоко и сливки</a></li>
+                                    <li class="cheese__item"><a href="" class="cheese__link">Сухие молочные продукты</a></li>
+                                    <li class="cheese__item"><a href="" class="cheese__link">Кисломолочные продукты</a></li>
+                                    <li class="cheese__item"><a href="" class="cheese__link">Выдержанные сыры</a></li>
+                                    <li class="cheese__item"><a href="" class="cheese__link">Твёрдые сыры</a></li>
+                                    <li class="cheese__item"><a href="" class="cheese__link">Плавленный сыр</a></li>
+                                    <li class="cheese__item"><a href="" class="cheese__link">Рассольные продукты</a></li>
+                                    <li class="cheese__item"><a href="" class="cheese__link">Молодые сыры</a></li>
+                                    <li class="cheese__item"><a href="" class="cheese__link">Сливочные и творожные сыры</a></li>
+                                    <li class="cheese__item"><a href="" class="cheese__link">Специалитеты с сыром</a></li>
+                                    <li class="cheese__item"><a href="" class="cheese__link">Молочные напитки</a></li>
+                                </ul>
+                            </div>
+                            <a href="" class="button button-cheese"><span>Подробно о товарax</span></a>
+                        </div>
+                            <div class="cheese__product" data-cheese="content" data-cheese-index="item2">
+                                <h3 class="cheese__title">Продукты<br>для HoReCa</h3>
+                                <a href="" class="cheese__back">&lt; Назад  —</a>
+                                <div class="cheese__text-block">
+                                    <p class="cheese__text">2</p>
+                                    <ul class="cheese__links">
+                                        <li class="cheese__item"><a href="" class="cheese__link">Масло сливочное и спреды</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Молоко и сливки</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Сухие молочные продукты</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Кисломолочные продукты</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Выдержанные сыры</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Твёрдые сыры</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Плавленный сыр</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Рассольные продукты</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Молодые сыры</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Сливочные и творожные сыры</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Специалитеты с сыром</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Молочные напитки</a></li>
+                                    </ul>
+                                </div>
+                                <a href="" class="button button-cheese"><span>Подробно о товарax</span></a>
+                            </div>
+                            <div class="cheese__product" data-cheese="content" data-cheese-index="item3">
                                 <h3 class="cheese__title">Продукты<br>для HoReCa</h3>
                                 <a href="" class="cheese__back">&lt; Назад  —</a>
                                 <div class="cheese__text-block">
@@ -136,7 +180,7 @@
                                 <a href="" class="button button-cheese"><span>Подробно о товарax</span></a>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-none">
+                        <div class="col-12 col-lg-24">
                             <div class="cheese-circle">
                                 <div class="shadow"></div>
                                 <div class="piece" data-number="item1" data-type="piece"></div>
