--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-24">
-                        <h1 class="h1_about-company">О компании</h1>
+                        <h1 class="h1">О компании</h1>
                     </div>
                 </div>
             </div>
@@ -527,7 +527,7 @@
             </div>
             <div class="background-page__tomat_about"></div>
             <div class="background-page__butter_about"></div>
-            <div class="background-page__cheese-left-about"></div>
+            <div class="background-page__cheese-left_about"></div>
             <div class="background-page__block-left-top_about"></div>
             <div class="background-page__block-left-middle-top_about"></div>
             <div class="background-page__block-left-middle_about"></div>
