--- a/event_inn.html
+++ b/event_inn.html
@@ -79,112 +79,152 @@
             </div>
         </header>
         <div class="background-page">
-            <div class="container">
-                <div class="element">
-                    <h1 class="h1 h1_mt-35">События</h1>
-                </div>
-                <div class="search">
-                    <div class="search__form-mini">
-                        <form action="" method="get">
-                            <input class="search__form-mini__input" type="text" placeholder="" name="q" value="" size="40">
-                            <button class="search__form-mini__button" role="button" type="submit" value="Искать"><i
-                                class="icon search__form_button"></i></button>
-                        </form>
+            <div class="wrap-search wrap-search_pt-42">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-24 css-right">
+                            <div class="bread-crumbs bread-crumbs_return bread-crumbs_after">
+                                <ul>
+                                    <li><a href="">Все события</a></li>
+                                </ul>
+                            </div>
+                            <div class="search css-right">
+                                <div class="search__form-mini">
+                                    <form action="" method="get">
+                                        <input class="search__form-mini__input" type="text" placeholder="" name="q" value="" size="40">
+                                        <button class="search__form-mini__button" role="button" type="submit" value="Искать"><i class="icon search__form_button"></i></button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
-            <section class="events">
+            <div class="product-use-carousel product-use-carousel_m-0-50">
                 <div class="container">
-                    <article class="events__event">
-                        <div class="events__event__img">
-                            <img src="images/product/product-page/product-use-2.png" alt="">
-                        </div>
-                        <div class="events__event__content">
-                            <h3 class="h3">ПРОДЭКСПО-2016</h3>
-                            <p class="p">Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день Компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных</p>
-                            <div class="events__event__content__time-more">
-                                <time>23 мая 2017</time>
-                                <a href="" class="css-right"><span>Подробней</span></a>
+                    <div class="row">
+                        <div class="product-use-carousel__wrap">
+                            <div class="product-use-carousel__carousel">
+                                <div class="product-use-carousel__carousel__item">
+                                    <img src="images/product/product-page/product-use-2.png" alt="">
+                                    <div class="product-use-carousel__carousel__item__name">Дегустация сыров от «Футленд»</div>
+                                    <div class="product-use-carousel__carousel__item__block-link">
+                                        <a href=""><span>Подробней</span></a>
+                                    </div>
+                                </div>
+                                <div class="product-use-carousel__carousel__item">
+                                    <img src="images/product/product-page/product-use-1.png" alt="">
+                                    <div class="product-use-carousel__carousel__item__name">Чемпионат мира по продуктам питания</div>
+                                    <div class="product-use-carousel__carousel__item__block-link">
+                                        <a href=""><span>Подробней</span></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </article>
-                    <article class="events__event">
-                        <div class="events__event__img">
-                            <img src="images/product/product-page/product-use-1.png" alt="">
-                        </div>
-                        <div class="events__event__content">
-                            <h3 class="h3">ПРОДЭКСПО-2016</h3>
-                            <p class="p">Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день Компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных</p>
-                            <div class="events__event__content__time-more">
-                                <time>23 мая 2017</time>
-                                <a href="" class="css-right"><span>Подробней</span></a>
+                        <div class="product-use-carousel__wrap">
+                            <div class="product-use-carousel__carousel">
+                                <div class="product-use-carousel__carousel__item">
+                                    <img src="images/product/product-page/product-use-1.png" alt="">
+                                    <div class="product-use-carousel__carousel__item__name">Чемпионат мира по продуктам питания</div>
+                                    <div class="product-use-carousel__carousel__item__block-link">
+                                        <a href=""><span>Подробней</span></a>
+                                    </div>
+                                </div>
+                                <div class="product-use-carousel__carousel__item">
+                                    <img src="images/product/product-page/product-use-2.png" alt="">
+                                    <div class="product-use-carousel__carousel__item__name">Чемпионат мира по продуктам питания</div>
+                                    <div class="product-use-carousel__carousel__item__block-link">
+                                        <a href=""><span>Подробней</span></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </article>
-                    <article class="events__event">
-                        <div class="events__event__img">
-                            <img src="images/product/product-page/product-use-2.png" alt="">
-                        </div>
-                        <div class="events__event__content">
-                            <h3 class="h3">ПРОДЭКСПО-2016</h3>
-                            <p class="p">Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день Компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных</p>
-                            <div class="events__event__content__time-more">
-                                <time>23 мая 2017</time>
-                                <a href="" class="css-right"><span>Подробней</span></a>
+                        <div class="product-use-carousel__wrap">
+                            <div class="product-use-carousel__carousel">
+                                <div class="product-use-carousel__carousel__item">
+                                    <img src="images/product/product-page/product-use-2.png" alt="">
+                                    <div class="product-use-carousel__carousel__item__name">ПРОДЭКСПО-2016</div>
+                                    <div class="product-use-carousel__carousel__item__block-link">
+                                        <a href=""><span>Подробней</span></a>
+                                    </div>
+                                </div>
+                                <div class="product-use-carousel__carousel__item">
+                                    <img src="images/product/product-page/product-use-1.png" alt="">
+                                    <div class="product-use-carousel__carousel__item__name">ПРОДЭКСПО-2016</div>
+                                    <div class="product-use-carousel__carousel__item__block-link">
+                                        <a href=""><span>Подробней</span></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </article>
-                    <article class="events__event">
-                        <div class="events__event__img">
-                            <img src="images/product/product-page/product-use-1.png" alt="">
-                        </div>
-                        <div class="events__event__content">
-                            <h3 class="h3">ПРОДЭКСПО-2016</h3>
-                            <p class="p">Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день Компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных</p>
-                            <div class="events__event__content__time-more">
-                                <time>23 мая 2017</time>
-                                <a href="" class="css-right"><span>Подробней</span></a>
+                        <div class="product-use-carousel__wrap">
+                            <div class="product-use-carousel__carousel">
+                                <div class="product-use-carousel__carousel__item">
+                                    <img src="images/product/product-page/product-use-1.png" alt="">
+                                    <div class="product-use-carousel__carousel__item__name">Дегустация сыров от «Футленд»</div>
+                                    <div class="product-use-carousel__carousel__item__block-link">
+                                        <a href=""><span>Подробней</span></a>
+                                    </div>
+                                </div>
+                                <div class="product-use-carousel__carousel__item">
+                                    <img src="images/product/product-page/product-use-2.png" alt="">
+                                    <div class="product-use-carousel__carousel__item__name">Дегустация сыров от «Футленд»</div>
+                                    <div class="product-use-carousel__carousel__item__block-link">
+                                        <a href=""><span>Подробней</span></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </article>
-                    <article class="events__event">
-                        <div class="events__event__img">
-                            <img src="images/product/product-page/product-use-2.png" alt="">
-                        </div>
-                        <div class="events__event__content">
-                            <h3 class="h3">ПРОДЭКСПО-2016</h3>
-                            <p class="p">Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день Компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных</p>
-                            <div class="events__event__content__time-more">
-                                <time>23 мая 2017</time>
-                                <a href="" class="css-right"><span>Подробней</span></a>
-                            </div>
-                        </div>
-                    </article>
+                    </div>
+                </div>
+            </div>
+            <section class="event-inn">
+                <div class="container">
+                    <h2 class="h2 event-inn__h2">Чемпионат мира по продуктам питания</h2>
+                    <div class="event-inn__img"><img src="images/event-inn.png" alt=""></div>
+                    <p>Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день Компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.</p>
+                    <div class="text-about-company__advantages text-about-company__advantages_event">
+                        <span>Наши преимущества это:</span>
+                        <ul>
+                            <li>собственное производство, основанное на полном цикле переработки сырья (молока)</li>
+                            <li>широкая линейка товаров в постоянном наличии на складе</li>
+                            <li>высокое качество продукции</li>
+                            <li>надежные партнерские отношения с производителями</li>
+                            <li>гибкие возможности по доставке грузов благодаря имеющейся разветвленной логистике в регионы России</li>
+                            <li>собственный автотранспорт</li>
+                            <li>опыт работы с крупнейшими сетевыми клиентами в федеральном масштабе.</li>
+                        </ul>
+                    </div>
                 </div>
             </section>
-            <div class="container">
-                <div class="product-pagination product-pagination_padding">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-19 col-xl-17 col-lg-24 ">
-                                <ul class="product-pagination__pagination product-pagination__pagination_right">
-                                    <li><a href="" class="product-pagination__pagination__elem-active">1</a></li>
-                                    <li><a href="">2</a></li>
-                                    <li><a href="">3</a></li>
-                                    <li><a href="">4</a></li>
-                                    <li><a href="">5</a></li>
-                                    <li><a href="">6</a></li>
-                                    <li><a href="">7</a></li>
-                                    <li><a href="">8</a></li>
-                                    <li><a href="">9</a></li>
-                                    <li><a href="" class="product-pagination__pagination__elem-deactive">...</a></li>
-                                    <li><a href="">15</a></li>
-                                </ul>
+            <div class="product-use-carousel_4_gallery">
+                <div class="container">
+                    <h2 class="h2 h2_mb-25">Галерея</h2>
+                    <div class="product-use-carousel_4__carousel">
+                        <div class="product-use-carousel__carousel__item product-use-carousel_4__carousel__item product-use-carousel_4__carousel__item_gallery">
+                            <div class="product-use-carousel_4__carousel__item__wrap product-use-carousel_4__carousel__item__wrap_gallery">
+                                <img src="images/product/product-page/product-use-2.png" alt="">
                             </div>
-                            <div class="col-5 col-xl-7 col-lg-24 css-right">
-                                <div class="product-pagination__button">
-                                    <a href="" class="button-cheese"><span>Показать все</span></a>
-                                </div>
+                        </div>
+                        <div class="product-use-carousel__carousel__item product-use-carousel_4__carousel__item product-use-carousel_4__carousel__item_gallery">
+                            <div class="product-use-carousel_4__carousel__item__wrap product-use-carousel_4__carousel__item__wrap_gallery">
+                                <img src="images/product/product-page/product-use-1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="product-use-carousel__carousel__item product-use-carousel_4__carousel__item product-use-carousel_4__carousel__item_gallery">
+                            <div class="product-use-carousel_4__carousel__item__wrap product-use-carousel_4__carousel__item__wrap_gallery">
+                                <img src="images/product/product-page/product-use-2.png" alt="">
+                            </div>
+                        </div>
+                        <div class="product-use-carousel__carousel__item product-use-carousel_4__carousel__item product-use-carousel_4__carousel__item_gallery">
+                            <div class="product-use-carousel_4__carousel__item__wrap product-use-carousel_4__carousel__item__wrap_gallery">
+                                <img src="images/product/product-page/product-use-1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="product-use-carousel__carousel__item product-use-carousel_4__carousel__item product-use-carousel_4__carousel__item_gallery">
+                            <div class="product-use-carousel_4__carousel__item__wrap product-use-carousel_4__carousel__item__wrap_gallery">
+                                <img src="images/product/product-page/product-use-2.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -193,7 +233,6 @@
             <div class="background-page__cheese-left_event"></div>
             <div class="background-page__block-left-top_event"></div>
             <div class="background-page__block-left-middle_event"></div>
-            <div class="background-page__block-left-bottom_event"></div>
             <div class="background-page__butter-right_event"></div>
             <div class="background-page__block-right-top_event"></div>
         </div>
