--- a/brands.html
+++ b/brands.html
@@ -256,7 +256,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/wimm-bill-dann-foods-logo-svg-1024x638.png" alt="">
+                                            <img src="images/trade-marks/Cream_nuvo-01.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Вимм-Билль-Данн</div>
                                     </div>
@@ -266,7 +266,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/heidi-logo.png" alt="">
+                                            <img src="images/trade-marks/Heidi.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Heidi</div>
                                     </div>
@@ -276,7 +276,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-36.png" alt="">
+                                            <img src="images/trade-marks/La_paulina-01.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Mlekara sabac</div>
                                     </div>
@@ -286,7 +286,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-37.png" alt="">
+                                            <img src="images/trade-marks/Lattesso-01.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Савушкин продукт</div>
                                     </div>
@@ -296,27 +296,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-38.png" alt="">
-                                        </div>
-                                        <div class="trade-marks__item__card__title">Valio</div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="trade-marks__item">
-                                <a href="">
-                                    <div class="trade-marks__item__card">
-                                        <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-39.png" alt="">
-                                        </div>
-                                        <div class="trade-marks__item__card__title">Беловежские сыры</div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="trade-marks__item">
-                                <a href="">
-                                    <div class="trade-marks__item__card">
-                                        <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/wimm-bill-dann-foods-logo-svg-1024x638.png" alt="">
+                                            <img src="images/trade-marks/Cream_nuvo-01.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Вимм-Билль-Данн</div>
                                     </div>
@@ -326,7 +306,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/heidi-logo.png" alt="">
+                                            <img src="images/trade-marks/Heidi.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Heidi</div>
                                     </div>
@@ -336,7 +316,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-36.png" alt="">
+                                            <img src="images/trade-marks/La_paulina-01.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Mlekara sabac</div>
                                     </div>
@@ -346,7 +326,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-37.png" alt="">
+                                            <img src="images/trade-marks/Lattesso-01.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Савушкин продукт</div>
                                     </div>
@@ -356,27 +336,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-38.png" alt="">
-                                        </div>
-                                        <div class="trade-marks__item__card__title">Valio</div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="trade-marks__item">
-                                <a href="">
-                                    <div class="trade-marks__item__card">
-                                        <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-39.png" alt="">
-                                        </div>
-                                        <div class="trade-marks__item__card__title">Беловежские сыры</div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="trade-marks__item">
-                                <a href="">
-                                    <div class="trade-marks__item__card">
-                                        <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/wimm-bill-dann-foods-logo-svg-1024x638.png" alt="">
+                                            <img src="images/trade-marks/Cream_nuvo-01.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Вимм-Билль-Данн</div>
                                     </div>
@@ -386,7 +346,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/heidi-logo.png" alt="">
+                                            <img src="images/trade-marks/Heidi.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Heidi</div>
                                     </div>
@@ -396,7 +356,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-36.png" alt="">
+                                            <img src="images/trade-marks/La_paulina-01.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Mlekara sabac</div>
                                     </div>
@@ -406,7 +366,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-37.png" alt="">
+                                            <img src="images/trade-marks/Lattesso-01.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Савушкин продукт</div>
                                     </div>
@@ -416,27 +376,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-38.png" alt="">
-                                        </div>
-                                        <div class="trade-marks__item__card__title">Valio</div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="trade-marks__item">
-                                <a href="">
-                                    <div class="trade-marks__item__card">
-                                        <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-39.png" alt="">
-                                        </div>
-                                        <div class="trade-marks__item__card__title">Беловежские сыры</div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="trade-marks__item">
-                                <a href="">
-                                    <div class="trade-marks__item__card">
-                                        <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/wimm-bill-dann-foods-logo-svg-1024x638.png" alt="">
+                                            <img src="images/trade-marks/Cream_nuvo-01.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Вимм-Билль-Данн</div>
                                     </div>
@@ -446,7 +386,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/heidi-logo.png" alt="">
+                                            <img src="images/trade-marks/Heidi.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Heidi</div>
                                     </div>
@@ -456,7 +396,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-36.png" alt="">
+                                            <img src="images/trade-marks/La_paulina-01.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Mlekara sabac</div>
                                     </div>
@@ -466,7 +406,7 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-37.png" alt="">
+                                            <img src="images/trade-marks/Lattesso-01.png" alt="">
                                         </div>
                                         <div class="trade-marks__item__card__title">Савушкин продукт</div>
                                     </div>
@@ -476,9 +416,9 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-38.png" alt="">
+                                            <img src="images/trade-marks/Cream_nuvo-01.png" alt="">
                                         </div>
-                                        <div class="trade-marks__item__card__title">Valio</div>
+                                        <div class="trade-marks__item__card__title">Вимм-Билль-Данн</div>
                                     </div>
                                 </a>
                             </div>
@@ -486,9 +426,69 @@
                                 <a href="">
                                     <div class="trade-marks__item__card">
                                         <div class="trade-marks__item__card__img">
-                                            <img src="images/trade-marks/layer-39.png" alt="">
+                                            <img src="images/trade-marks/Heidi.png" alt="">
                                         </div>
-                                        <div class="trade-marks__item__card__title">Беловежские сыры</div>
+                                        <div class="trade-marks__item__card__title">Heidi</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="trade-marks__item">
+                                <a href="">
+                                    <div class="trade-marks__item__card">
+                                        <div class="trade-marks__item__card__img">
+                                            <img src="images/trade-marks/La_paulina-01.png" alt="">
+                                        </div>
+                                        <div class="trade-marks__item__card__title">Mlekara sabac</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="trade-marks__item">
+                                <a href="">
+                                    <div class="trade-marks__item__card">
+                                        <div class="trade-marks__item__card__img">
+                                            <img src="images/trade-marks/Lattesso-01.png" alt="">
+                                        </div>
+                                        <div class="trade-marks__item__card__title">Савушкин продукт</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="trade-marks__item">
+                                <a href="">
+                                    <div class="trade-marks__item__card">
+                                        <div class="trade-marks__item__card__img">
+                                            <img src="images/trade-marks/Cream_nuvo-01.png" alt="">
+                                        </div>
+                                        <div class="trade-marks__item__card__title">Вимм-Билль-Данн</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="trade-marks__item">
+                                <a href="">
+                                    <div class="trade-marks__item__card">
+                                        <div class="trade-marks__item__card__img">
+                                            <img src="images/trade-marks/Heidi.png" alt="">
+                                        </div>
+                                        <div class="trade-marks__item__card__title">Heidi</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="trade-marks__item">
+                                <a href="">
+                                    <div class="trade-marks__item__card">
+                                        <div class="trade-marks__item__card__img">
+                                            <img src="images/trade-marks/La_paulina-01.png" alt="">
+                                        </div>
+                                        <div class="trade-marks__item__card__title">Mlekara sabac</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="trade-marks__item">
+                                <a href="">
+                                    <div class="trade-marks__item__card">
+                                        <div class="trade-marks__item__card__img">
+                                            <img src="images/trade-marks/Lattesso-01.png" alt="">
+                                        </div>
+                                        <div class="trade-marks__item__card__title">Савушкин продукт</div>
                                     </div>
                                 </a>
                             </div>
