page catalog and corrections

--- a/about.html
+++ b/about.html
@@ -403,7 +403,8 @@
                             <div class="col-8 col-lg-24">
                                 <div class="structure-company__wrap structure-company__wrap_pad-left structure-company__wrap_no-elem">
                                     <div class="structure-company__img structure-company__img_size">
-                                        <img src="images/product/category/text__block-1.png" alt="">
+                                        <img src="images/product/category/text__block-1.png" alt="" class="structure-company__img_over">
+                                        <img src="images/product/category/text__block-1_hover.png" alt="" class="structure-company__img_hover">
                                     </div>
                                     <p class="structure-company_direct__p-mb">Еланский комбинат обладает сетью пунктов сбора и охлаждения молока, насчитывает около ста единиц техники. В основном, молоковозы. На территории комбината находится собственная лаборатория, отвечающая за контроль качества сырья, а также цеха, оснащенные современным оборудованием. </p>
                                 </div>
@@ -411,7 +412,8 @@
                             <div class="col-8 col-lg-24">
                                 <div class="structure-company__wrap structure-company__wrap_no-elem">
                                     <div class="structure-company__img structure-company__img_size">
-                                        <img src="images/product/category/text__block-2.png" alt="">
+                                        <img src="images/product/category/text__block-2.png" alt="" class="structure-company__img_over">
+                                        <img src="images/product/category/text__block-2_hover.png" alt="" class="structure-company__img_hover">
                                     </div>
                                     <p class="structure-company_direct__p-mb">Еланский комбинат насчитывает около ста единиц техники. В основном, молоковозы. На территории комбината находится собственная лаборатория, отвечающая за контроль качества сырья, а также цеха, оснащенные современным оборудованием. </p>
                                 </div>
@@ -419,7 +421,8 @@
                             <div class="col-8 col-lg-24">
                                 <div class="structure-company__wrap structure-company__wrap_pad-right structure-company__wrap_no-elem">
                                     <div class="structure-company__img structure-company__img_size">
-                                        <img src="images/product/category/text__block-3.png" alt="">
+                                        <img src="images/product/category/text__block-3.png" alt="" class="structure-company__img_over">
+                                        <img src="images/product/category/text__block-3_hover.png" alt="" class="structure-company__img_hover">
                                     </div>
                                     <p class="structure-company_direct__p-mb">В основном, молоковозы. На территории комбината находится собственная лаборатория, отвечающая за контроль качества сырья, а также цеха, оснащенные современным оборудованием. Еланский комбинат обладает сетью пунктов сбора и охлаждения молока, насчитывает около ста единиц техники. </p>
                                 </div>
